--- a/raw/res/main.less
+++ b/raw/res/main.less
@@ -110,6 +110,7 @@ body{
 	font-size: 14pt;
 	padding: 1em;
 	&.center{text-align: center;}
+	& a{color: inherit;}
 }
 .image-wrapper{
 	text-align: center;
